--- a/index.css
+++ b/index.css
@@ -48,6 +48,18 @@ table {
 }
 /* END OF RESET */
 
+
+
+
+
+
+
+html{
+    font-size:62.5%;
+    max-width:100%;
+    overflow-x:hidden;  
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap');
 /* font-family: 'Chelsea Market', cursive; */
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
@@ -56,41 +68,166 @@ table {
 .plan{
     background:#FF764E;
     font-family: 'Roboto Mono', monospace;
+    border:1px solid white;
+    border-radius:20%;
+    text-align:center;
+    display:inline-block;
+    box-sizing:border-box;
+    margin:1rem 0rem 1rem 4rem;
+    padding: 3rem;
+    transition:.3s;
+    max-width:20rem;
+    max-height:8rem;
+}
+.plan:hover{
+    background:white;
+    border: 4px dotted purple;
+}
+.plan a{
+    text-decoration:none;
+    color:white;
+    font-size:2rem;
+    padding:5%;
+}
+.plan:hover a{
+    color:black;
 }
 .learn{
     background:#5ED3EB;
     font-family: 'Roboto Mono', monospace;
+    border:1px solid white;
+    border-radius:20%;
+    text-align:center;
+    display:inline-block;
+    box-sizing:border-box;
+    margin:1rem 0rem 1rem 4rem;
+    padding: 3rem;
+    max-width:20rem;
+    max-height:8rem;
+    transition:.3s;
+}
+.learn a{
+    text-decoration:none;
+    color:white;
+    font-size:2rem;
+    padding: 5%;
+}
+.learn:hover{
+    background:white;
+    border: 4px dotted purple;
+}
+.learn:hover a{
+    color:black;
 }
 .involved{
     background:#FFCD69;
     font-family: 'Roboto Mono', monospace;
+    border:1px solid white;
+    border-radius:20%;
+    text-align:center;
+    display:inline-block;
+    box-sizing:border-box;
+    margin:1rem 0rem 1rem 4rem;
+    padding: 3rem;
+    max-width:20rem;
+    max-height:8rem;
+    transition:.3s;
 }
-
+.involved a{
+    text-decoration:none;
+    color:white;
+    font-size:2rem;
+    padding: 5%;
+}
+.involved:hover{
+    background:white;
+    border: 4px dotted purple;
+}
+.involved:hover a{
+    color:black;
+}
+nav{
+    text-align:center;
+}
 .headerImg{
     display:inline-block;
+    padding-left:20%;
+    box-sizing:border-box;
 }
 .headerImg img{
     width:200px;
+    border: 10px solid white;
+    border-radius:60%;
 }
-.footerImg img{
-    width:200px;
+.footerImg{
+    background: url("assets/footer_img.jpg");
+    width:100vw;
+    height:20vh;
+    border: 2px solid white;
+    box-sizing:border-box;
 }
 .main-header{
     display:inline-block;
+    padding-left:35%;
+    box-sizing:border-box;
 }
 .main-header h2{
     font-family: 'Roboto Mono', monospace;
+    font-size:2rem;
+    padding-top:3rem;
 }
 .ypg{
     font-family: 'Chelsea Market', cursive;
+    font-size:12rem;
+    padding: 0 50rem 0 0;
+    width:100%;
 }
 main{
     background:#DDB9A3;
     font-family: 'Roboto Mono', monospace;
+    color:white;
+    margin:2rem;
+}
+.main-body{
+    margin:.5rem;
+    padding:2rem;
+}
+.main-body p{
+    font-size:3rem;
 }
 .fireImg img{
     width:100px;
 }
+.fireImg{
+    text-align:center;
+}
 .lodgingImg img{
     width:100px;
+}
+.lodgingImg{
+    text-align:center;
+}
+.footerNav{
+    background:#F9E7DC;
+}
+p{
+    font-family: 'Roboto Mono', monospace;
+    text-align:center;
+    font-size:2rem;
+}
+span{
+    font-weight:900;
+}
+h2{
+    padding-left:2rem;
+}
+.always{
+    padding: 0 50% 0 10%;
+    text-align:center;
+}
+.fire{
+    padding:1rem 30% 2rem 30%;
+}
+.lodging{
+    padding:1rem 30% 2rem 30%;
 }
