another update, getting close

--- a/index.css
+++ b/index.css
@@ -75,6 +75,7 @@ html{
     box-sizing:border-box;
     margin:1rem 0rem 1rem 4rem;
     padding: 3rem;
+    padding-bottom:7rem;
     transition:.3s;
     max-width:20rem;
     max-height:8rem;
@@ -87,7 +88,7 @@ html{
     text-decoration:none;
     color:white;
     font-size:2rem;
-    padding:5%;
+    padding: 5%;
 }
 .plan:hover a{
     color:black;
@@ -102,6 +103,7 @@ html{
     box-sizing:border-box;
     margin:1rem 0rem 1rem 4rem;
     padding: 3rem;
+    padding-bottom:7rem;
     max-width:20rem;
     max-height:8rem;
     transition:.3s;
@@ -129,6 +131,7 @@ html{
     box-sizing:border-box;
     margin:1rem 0rem 1rem 4rem;
     padding: 3rem;
+    padding-bottom:7rem;
     max-width:20rem;
     max-height:8rem;
     transition:.3s;
@@ -149,44 +152,48 @@ html{
 nav{
     text-align:center;
 }
-.headerImg{
-    display:inline-block;
-    padding-left:20%;
+img{
+    width:50rem;
+    border: 1rem solid white;
+    border-radius:60%;
     box-sizing:border-box;
 }
-.headerImg img{
-    width:200px;
-    border: 10px solid white;
-    border-radius:60%;
+.container{
+    display:table;
+}
+.container > *{
+    display:table-cell;
+    vertical-align:top;
 }
 .footerImg{
     background: url("assets/footer_img.jpg");
     width:100vw;
-    height:20vh;
-    border: 2px solid white;
+    height:40vh;
+    border: 2px 2px 0px 2px solid white;
     box-sizing:border-box;
 }
 .main-header{
-    display:inline-block;
-    padding-left:35%;
+    padding-top:5%;
     box-sizing:border-box;
 }
 .main-header h2{
     font-family: 'Roboto Mono', monospace;
-    font-size:2rem;
-    padding-top:3rem;
+    font-size:3rem;
+    padding-top:7rem;
+    padding-left:20%;
 }
 .ypg{
     font-family: 'Chelsea Market', cursive;
-    font-size:12rem;
-    padding: 0 50rem 0 0;
+    font-size:11rem;
+    padding: 0 50rem 0 5%;
     width:100%;
+    display:inline-block;
 }
 main{
     background:#DDB9A3;
     font-family: 'Roboto Mono', monospace;
     color:white;
-    margin:2rem;
+    margin:5rem 7rem 5rem 7rem;
 }
 .main-body{
     margin:.5rem;
@@ -213,7 +220,7 @@ main{
 p{
     font-family: 'Roboto Mono', monospace;
     text-align:center;
-    font-size:2rem;
+    font-size:2.5rem;
 }
 span{
     font-weight:900;
@@ -226,8 +233,8 @@ h2{
     text-align:center;
 }
 .fire{
-    padding:1rem 30% 2rem 30%;
+    padding:1rem 40% 2rem 40%;
 }
 .lodging{
-    padding:1rem 30% 2rem 30%;
+    padding:1rem 40% 2rem 40%;
 }
