--- a/index.css
+++ b/index.css
@@ -73,7 +73,7 @@ html{
     text-align:center;
     display:inline-block;
     box-sizing:border-box;
-    margin:1rem 0rem 1rem 4rem;
+    margin:2.5% 10% 5% 4rem;
     padding: 3rem;
     padding-bottom:7rem;
     transition:.3s;
@@ -101,7 +101,7 @@ html{
     text-align:center;
     display:inline-block;
     box-sizing:border-box;
-    margin:1rem 0rem 1rem 4rem;
+    margin:2.5% 10% 5% 4rem;
     padding: 3rem;
     padding-bottom:7rem;
     max-width:20rem;
@@ -129,7 +129,7 @@ html{
     text-align:center;
     display:inline-block;
     box-sizing:border-box;
-    margin:1rem 0rem 1rem 4rem;
+    margin:2.5% 0 5% 4rem;
     padding: 3rem;
     padding-bottom:7rem;
     max-width:20rem;
@@ -181,7 +181,7 @@ img{
     font-family: 'Roboto Mono', monospace;
     font-size:3rem;
     padding-top:7rem;
-    padding-left:20%;
+    padding-left:12%;
 }
 .ypg{
     font-family: 'Chelsea Market', cursive;
@@ -194,7 +194,7 @@ main{
     background:#DDB9A3;
     font-family: 'Roboto Mono', monospace;
     color:white;
-    margin:5rem 7rem 5rem 7rem;
+    margin:5% 7% 1.2% 7%;
 }
 .main-body{
     margin:.5rem;
@@ -217,6 +217,7 @@ main{
 }
 .footerNav{
     background:#F9E7DC;
+    padding-top:1%;
 }
 p{
     font-family: 'Roboto Mono', monospace;
