--- a/index.css
+++ b/index.css
@@ -170,6 +170,8 @@ img{
     background: url("assets/footer_img.jpg");
     width:100vw;
     height:40vh;
+    background-repeat:no-repeat;
+    background-size:100% 100%;
     border: 2px 2px 0px 2px solid white;
     box-sizing:border-box;
 }
